[CSSRegions] getBoundingClientRect wrong for inline content nodes https://bugs.webkit.org/show_bug.cgi?id=117290

Reviewed by Alexandru Chiculita.

Source/WebCore:

getBoundingClientRect returned incorrect values for inline content that
was directly flowed inside regions because its mapLocalToContainer was not
properly patched as its RenderBox counterpart. This patch adds mapLocalToContainer
method in RenderFlowThread so that is properly called for all the elements inside the
flow thread.

Also, modified offsetFromContainer so that if the container is the flow thread,
offsetDependsOnPoint is set to true which further sets RenderGeometryMapStep::m_isNonUniform
to true for each step added in pushMappingToContainer methods.

Test: fast/regions/flowed-inline-content-bounding-client-rect.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::mapLocalToContainer):
(WebCore::RenderBox::pushMappingToContainer):
(WebCore::RenderBox::offsetFromContainer):
* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::mapLocalToContainer):
* rendering/RenderFlowThread.h:
* rendering/RenderInline.cpp:
(WebCore::RenderInline::offsetFromContainer):
* rendering/RenderObject.cpp:
(WebCore::RenderObject::offsetFromContainer):

LayoutTests:

Add test for inline content nodes flowed in regions and in regions with transform.

* fast/regions/flowed-inline-content-bounding-client-rect-expected.txt: Added.
* fast/regions/flowed-inline-content-bounding-client-rect.html: Added.


Canonical link: https://commits.webkit.org/135575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151309 268f45cc-cd09-0410-ab3c-d52691b4dbfc